@@ -7,6 +7,10 @@
 Image = "antiX.png"
 Files = "/etc/antix-version"
 
+[IPFire]
+Image = "IPFire.png"
+;detected in "/etc/system-release"
+
 [CRUX]
 Image = "Crux.png"
 ;detected in "/usr/bin/crux"
