@@ -1,5 +1,7 @@
 phpSysInfo 3.1.3
 
+ - [ADD] IPFire to detected distros
+
  - [UPD] Added "username" to filtered mount credentials
 
 phpSysInfo 3.1.2
@@ -8,9 +10,9 @@ phpSysInfo 3.1.2
  - [ADD] Linaro to detected distros
  - [ADD] Option for logging of functions executeProgram() and rfts()
  - [ADD] Add support of JSONP
- 
+
  - [FIX] Incorrect display of chunk size for the plugin mdstatus for some results
- 
+
 phpSysInfo 3.1.1
 
  - [ADD] SolusOS, Deepin and antiX to detected distros
